# AHD-1024

./: CHANGELOG.md  Cargo.toml  README.md  repo_info.txt
results/: anf_small_w1_r6_o4.json  anf_small_w2_r6_o4.json  anf_small_w4_r6_o4.json  avalanche_24_msgs1024_flips32_msg96_seed1234.json  avalanche_matrix_in128_msgs4096_msg96_seed1234.json  avalanche_matrix_in64_msgs1024_msg96_seed1234.json  avalanche_matrix_in64_msgs4096_msg96_seed1234.json  avalanche_msgs4096_flips64_msg96_seed1234.json  beam_trails_r3_beam32_w2.json  beam_trails_r3_beam32_w3.json  cube_samples1024_msg96_k10_seed7.json  cube_samples256_msg96_k10_seed7.json  cube_samples256_msg96_k4_seed7.json  cube_samples256_msg96_k6_seed7.json  cube_samples256_msg96_k8_seed7.json  fixed_points_samples200000_seed7.json  four_cycle_samples200000_seed7.json  higher_order_o2_pairs50000_msg96_seed1234.json  higher_order_o3_pairs50000_msg96_seed1234.json  higher_order_o4_pairs50000_msg96_seed1234.json  iota_tournament_1site_pairs200000_msg96_seed7.json  iota_tournament_3site_pairs200000_msg96_seed7.json  iota_tournament_5site_pairs200000_msg96_seed7.json  lane_activity_samples50000_msg96_seed1234.json  linear_matrix_in64_out256_samples16384_msg96_seed1234.json  linear_matrix_in64_out256_samples4096_msg96_seed1234.json  linear_probe_samples200000_msg96_seed7.json  low_weight_alt_pairs200000_msg96_seed7.json  low_weight_baseline_pairs200000_msg96_seed7.json  low_weight_pairs200000_msg96_seed7.json  low_weight_shifted_b_pairs200000_msg96_seed7.json  low_weight_shifted_pairs200000_msg96_seed7.json  (+18 more)
src/: lib.rs  main.rs
(+10 files in other folders)
