[package]
name = "ahd_1024"
version = "0.2.0"
edition = "2021"
description = "AHA-D-256 v0.2 exact Rust implementation, vector cross-checks, reduced-round search, and small-width ANF experiments"
license = "MIT"

[dependencies]
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"

[profile.release]
codegen-units = 1
lto = true
